# maven-artifact-rs

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: artifact.rs  lib.rs  metadata.rs  project.rs  resolver.rs
lib/src/pom/: mod.rs
lib/test-files/metadata/org/pac4j/pac4j-http/: maven-metadata.xml
lib/test-files/metadata/org/pac4j/pac4j-http/6.1.4-SNAPSHOT/: maven-metadata.xml
src/: artifact.rs  lib.rs  metadata.rs  reqwest_async.rs  resolver.rs
