[workspace.package]
authors = ["Erlend Hamnaberg <erlend@hamnaberg.net>"]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hamnis/maven-artifact-rs"
version = "0.1.0"

[workspace]
members = ["lib", "cli"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.39", features = ["derive"] }
url = "2.5.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "deflate", "gzip", "http2"] }
thiserror = "2"
tokio = { version = "1.45", features = ["rt", "macros"] }
anyhow = "1"
base64 = "0.22.1"
indicatif = "0.17.11"
xml-rs = "0.8.26"