[workspace.package]
authors = ["Erlend Hamnaberg <erlend@hamnaberg.net>"]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hamnis/maven-artifact-rs"
version = "0.1.0"

[workspace]
members = ["lib", "cli"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.51", features = ["derive"] }
url = "2.5.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "deflate", "gzip", "http2"] }
thiserror = "2"
tokio = { version = "1.48", features = ["rt", "macros"] }
anyhow = "1"
base64 = "0.22.1"
indicatif = "0.18.2"
xml-rs = "1.0.0"
regex = "1.12.2"
serde = "1"
serde_json = "1"