[package]
name = "maven-artifact-cli"
description = "Maven artifact command line"
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
serde-xml-rs.workspace = true
url.workspace = true
serde.workspace = true
reqwest.workspace = true
bytes.workspace = true
futures.workspace = true
tokio.workspace = true
tempfile.workspace = true
anyhow.workspace = true
maven-artifact = { path = "../lib" }
base64.workspace = true