[package]
name = "maven-artifact-cli"
description = "Maven artifact command line"
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
url.workspace = true
reqwest.workspace = true
tokio.workspace = true
anyhow.workspace = true
maven-artifact = { path = "../lib", features = ["progressbar"] }
base64.workspace = true
regex.workspace = true
serde_json.workspace = true
futures.workspace = true