[package]
name = "maven-artifact"
description = "Maven artifact library"
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
url.workspace = true
reqwest.workspace = true
thiserror.workspace = true
indicatif = { workspace = true, optional = true }
xml-rs.workspace = true
serde = { workspace = true, features = ["derive"] }
bytes.workspace = true
regex.workspace = true

[features]
progressbar = ["indicatif"]
